# radicle-upstream

./: .babelrc  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .license-compliancerc.js  .lintstagedrc.yaml  .prettierrc  .rustfmt.toml  .tool-versions  1202.js  1202.js.map  1362.js  1362.js.map  1446.js  1446.js.map  1478.js  1478.js.map  1719.js  1719.js.map  2274.js  2274.js.map  2290.js  2290.js.map  2364.js  2364.js.map  2402.js  2402.js.map  2457.js  2457.js.map  2851.js  2851.js.map  289.js  289.js.map  3005.js  3005.js.map  3021.js  3021.js.map  3139.js  3139.js.map  (+153 more)
.buildkite/: Dockerfile  Dockerfile.cypress  build-packages.sh  clippy.sh  env.sh  integration-tests.sh  integration.sh  mac-n-cheese.sh  pipeline.yaml  run.sh  unit.sh
.husky/: pre-push
app/: .eslintrc.json  .firebaserc  .gitignore  CHANGELOG.md  LICENSE  README.md  bsconfig.json  cypress.json  graphql_schema.json  package.json  reasonql.config.js  rollup.app.js  rollup.config.js  rollup.electron.js  schema.faker.graphql  schema.gql  schema.graphql  webpack.config.js  (+1 more)
ci/: build.sh  (+9 more)
proxy/: .rustfmt.toml  API.md  Cargo.toml  README.md  Rocket.toml  rust-toolchain
proxy/api/: Cargo.toml
proxy/api/src/: avatar.rs  browser.rs  cli.rs  config.rs  context.rs  control.rs  env.rs  error.rs  git_helper.rs  http.rs  identifier.rs  identity.rs  init_bin.rs  keystore.rs  lib.rs  main.rs  node.rs  notification.rs  patch.rs  process.rs  project.rs  registry.rs  service.rs  session.rs  shutdown_runner.rs
proxy/api/src/ethereum/: address.rs  claim_ext.rs
proxy/api/src/http/: avatar.rs  control.rs  diagnostics.rs  error.rs  identity.rs  keystore.rs  notification.rs  org.rs  peer.rs  project.rs  session.rs  source.rs  user.rs
proxy/api/src/http/project/: request.rs
proxy/api/src/registry/: transaction.rs
proxy/api/src/session/: announcements.rs  settings.rs
proxy/assets/: Solidity.sublime-syntax  TypeScript.sublime-syntax
proxy/coco/: Cargo.toml  control.rs
proxy/coco/project/: create.rs
proxy/coco/src/: announce.rs  announcement.rs  config.rs  control.rs  convert.rs  error.rs  git_helper.rs  identifier.rs  keystore.rs  lib.rs  merge_request.rs  oid.rs  peer.rs  project.rs  request.rs  seed.rs  shared.rs  signer.rs  source.rs  spawn_abortable.rs  state.rs  user.rs
proxy/coco/src/peer/: announcement.rs  control.rs  gossip.rs  include.rs  request.rs  run_state.rs  subroutines.rs  sync.rs  waiting_room.rs
proxy/coco/src/peer/run_state/: command.rs  config.rs  input.rs
proxy/coco/src/project/: checkout.rs  create.rs  peer.rs
proxy/coco/src/project/create/: validation.rs
proxy/coco/src/request/: existential.rs  sealed.rs  states.rs  waiting_room.rs
proxy/coco/src/request/waiting_room/: stream.rs
proxy/coco/src/state/: error.rs
proxy/coco/tests/: announcement.rs  common.rs  gossip.rs  internal.rs  merge_request.rs  replication.rs  source.rs  working_copy.rs
proxy/core/: Cargo.toml
proxy/core/src/: avatar.rs  env.rs  error.rs  identity.rs  keystore.rs  lib.rs  project.rs  session.rs
proxy/http/: Cargo.toml
proxy/http/src/: avatar.rs  control.rs  error.rs  identity.rs  lib.rs  project.rs  session.rs  source.rs  user.rs
proxy/registry/: Cargo.toml
proxy/src/: avatar.rs  coco.rs  config.rs  env.rs  error.rs  graphql.rs  http.rs  identity.rs  keystore.rs  lib.rs  main.rs  notification.rs  project.rs  queue.rs  register.rs  registry.rs  rest.rs  schema.rs  seed.rs  server_actix.rs  server_warp.rs  session.rs  source.rs
proxy/src/coco/: config.rs  control.rs  git_helper.rs  key.rs  peer.rs  project.rs  seed.rs  signer.rs  source.rs  types.rs
proxy/src/coco/project/: checkout.rs  create.rs
proxy/src/graphql/: api.rs  error.rs  git.rs  project.rs  registry.rs  schema.rs
proxy/src/http/: account.rs  avatar.rs  control.rs  doc.rs  error.rs  id.rs  identity.rs  notification.rs  org.rs  project.rs  session.rs  source.rs  transaction.rs  transfer.rs  user.rs
proxy/src/registry/: transaction.rs
proxy/src/rest/: branches.rs  commits.rs  lib.rs  orgs.rs  projects.rs
proxy/src/schema/: error.rs  git.rs  mod.rs  project.rs  registry.rs
proxy/tests/: checkout.rs  graphql_control_mutation.rs  graphql_mutation.rs  graphql_query.rs
proxy/tests/common/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
upstream-cli/: Cargo.toml
upstream-proxy/: Cargo.toml
upstream-proxy/assets/: Svelte.sublime-syntax  TOML.sublime-syntax  TypeScriptReact.sublime-syntax
upstream-proxy/src/: browser.rs  cli.rs  config.rs  context.rs  control.rs  daemon.rs  dev_cli.rs  env.rs  error.rs  events.rs  git_fetch.rs  http.rs  http_next.rs  identifier.rs  identity.rs  init_bin.rs  keystore.rs  lib.rs  notification.rs  patch.rs  peer.rs  process.rs  project.rs  semaphore_map.rs  service.rs  session.rs  shutdown_runner.rs  watch_monorepo.rs
upstream-proxy/src/daemon/: announcement.rs  checkout.rs  command.rs  config.rs  control.rs  convert.rs  create.rs  error.rs  existential.rs  gossip.rs  include.rs  input.rs  peer.rs  project.rs  request.rs  run_state.rs  running_waiting_room.rs  sealed.rs  seed.rs  state.rs  states.rs  subroutines.rs  waiting_room.rs
upstream-proxy/src/daemon/create/: validation.rs
upstream-proxy/src/daemon/peer/: announcement.rs  control.rs  gossip.rs  include.rs  run_state.rs  subroutines.rs  waiting_room.rs
upstream-proxy/src/daemon/peer/run_state/: command.rs  config.rs  input.rs  running_waiting_room.rs
upstream-proxy/src/daemon/project/: checkout.rs  create.rs  peer.rs
upstream-proxy/src/daemon/project/create/: validation.rs
upstream-proxy/src/daemon/request/: existential.rs  states.rs  waiting_room.rs
upstream-proxy/src/daemon/state/: error.rs
upstream-proxy/src/http/: control.rs  diagnostics.rs  error.rs  identity.rs  keystore.rs  notification.rs  project.rs  session.rs  source.rs
upstream-proxy/src/http/project/: request.rs
upstream-proxy/src/http_next/: diagnostics.rs  identity.rs  keystore.rs  project.rs  session.rs
upstream-seed/: Cargo.toml  README.md  build.rs
upstream-seed/src/: cli.rs  lib.rs  main.rs  peer.rs
(+1897 files in other folders)
