[workspace]
resolver = "2"
members = [
  "upstream-proxy",
  "upstream-seed",
  "upstream-cli",
]

[patch.crates-io.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.link-crypto]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.link-identities]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.lnk-identities]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.radicle-git-helpers]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.lnk-exe]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"

[patch.crates-io.radicle-data]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-03-15"


# Uncomment the following lines and comment out the radicle-link patches above
# to develop against a local copy of `radicle-link`.

# [patch.crates-io]
# librad = { path = "../radicle-link/librad" }
# link-crypto = { path = "../radicle-link/link-crypto" }
# link-identities = { path = "../radicle-link/link-identities" }
# lnk-exe = { path = "../radicle-link/lnk-exe" }
# lnk-identities = { path = "../radicle-link/lnk-identities" }
# radicle-git-ext = { path = "../radicle-link/git-ext" }
# radicle-git-helpers = { path = "../radicle-link/git-helpers" }

# These patches are the same as those listed in
# https://github.com/radicle-dev/radicle-link/blob/cycle/2022-03-15/Cargo.toml
