[workspace]
resolver = "2"
members = [
  "upstream-proxy",
  "upstream-cli",
]

[patch.crates-io.rad-common]
git = "https://github.com/radicle-dev/radicle-cli.git"
# Up-to-date as of 2022-04-05
rev = "bff13b4d36cd5dc5c7c761d5fe37a18b584020c3"

[patch.crates-io.lnk-clib]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.lnk-profile]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.link-crypto]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.link-identities]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.lnk-identities]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.radicle-git-helpers]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.lnk-exe]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.radicle-data]
git = "https://github.com/radicle-dev/radicle-link.git"
tag = "cycle/2022-04-05"

[patch.crates-io.radicle-source]
git = "https://github.com/radicle-dev/radicle-surf.git"
commit = "77b1905ba38fc9c95c01c0ed09d4d495548eacc2"

# Uncomment the following lines and comment out the radicle-link patches above
# to develop against a local copy of `radicle-link`.

# [patch.crates-io]
# librad = { path = "../radicle-link/librad" }
# link-crypto = { path = "../radicle-link/link-crypto" }
# link-identities = { path = "../radicle-link/link-identities" }
# lnk-exe = { path = "../radicle-link/lnk-exe" }
# lnk-identities = { path = "../radicle-link/lnk-identities" }
# radicle-git-ext = { path = "../radicle-link/git-ext" }
# radicle-git-helpers = { path = "../radicle-link/git-helpers" }
# radicle-source = { path = "../radicle-surf/source" }

# These patches are the same as those listed in
# https://github.com/radicle-dev/radicle-link/blob/cycle/2022-04-05/Cargo.toml
