[package]
name = "proxy"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Proxy to serve a specialised API to the Upstream UI."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "crypto", "p2p" ]
keywords = [ "radicle-upstream", "proxy" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"

[dependencies]
async-trait = "0.1"
directories = "2.0"
futures = { version = "0.3", features = [ "compat" ] }
hex = "0.4"
kv = { version = "0.20", features = [ "bincode-value", "json-value" ] }
log = "0.4"
nonempty = "0.2"
pico-args = "0.3"
pretty_env_logger = "0.3"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_cbor = "0.11.1"
serde_json = "1.0"
tempfile = "3.1"
tokio = { version = "0.2", features = [ "macros", "time" ] }
url17 = { package = "url", version = "1.7" }
url = "2.1"
warp = { git = "https://github.com/radicle-dev/warp", branch = "openapi", features = [ "openapi" ] }

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "c8806db72936338e664ed72a5838780a541967c4"

[dependencies.radicle-keystore]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "c8806db72936338e664ed72a5838780a541967c4"

[dependencies.radicle-registry-client]
git = "https://github.com/radicle-dev/radicle-registry.git"
rev = "a94b22bb5bcdc8d70d059d69c364f061d13e0741"

[dev-dependencies]
pretty_assertions = "0.6"
