[package]
name = "proxy"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Proxy to serve a specialised API to the Upstream UI."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "crypto", "p2p" ]
keywords = [ "radicle-upstream", "proxy" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"

[dependencies]
async-trait = "0.1"
directories = "2.0"
futures = { version = "0.3", features = [ "compat" ] }
hex = "0.4"
kv = { version = "0.20", features = [ "bincode-value", "json-value" ] }
log = "0.4"
nonempty = "0.2"
pico-args = "0.3"
pretty_env_logger = "0.3"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_cbor = "0.11.1"
serde_json = "1.0"
tempfile = "3.1"
thiserror = "1.0"
tokio = { version = "0.2", features = [ "macros", "time" ] }
url17 = { package = "url", version = "1.7" }
url = "2.1"
warp = { git = "https://github.com/radicle-dev/warp", branch = "openapi", features = [ "openapi" ] }

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "35f6e5e8bbe91012dae180f4a41ae582b3b1d2c2"

[dependencies.radicle-keystore]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "35f6e5e8bbe91012dae180f4a41ae582b3b1d2c2"

[dependencies.radicle-registry-client]
git = "https://github.com/radicle-dev/radicle-registry.git"
rev = "311924ec9f0c2a55920cebe38eef2de5258bcb48"

[dev-dependencies]
bytes = "0.5"
http = "0.2"
pretty_assertions = "0.6"

[patch.crates-io]
# Ed25519 support for rustls
#
# This needs to be a "patch" so dependencies transitively using rustls also use
# our version.
#
# See https://github.com/ctz/rustls/pull/340
rustls = { git = "https://github.com/kim/rustls", rev = "558405ac3c229947ca17b9285d60368ce67835ce" }
