[package]
name = "upstream-cli"
description = "Companion CLI for code collaboration with Radicle Upstream"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-only"
authors = [
  "Thomas Scholtes <geigerzaehler@axiom.fm>",
  "Rūdolfs Ošiņš <rudolfs@osins.org>"
]
readme = "https://github.com/radicle-dev/radicle-upstream/blob/main/upstream-cli/README.md"
repository = "git@github.com:radicle-dev/radicle-upstream.git"
keywords = [ "radicle", "upstream", "cli" ]
categories = [ "code-collaboration", "p2p" ]


[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive", "env"] }

# radicle-link dependencies. These are patched in the workspace
librad = "0.1"
