[package]
name = "api"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Proxy to serve Upstream domain."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "code-collaboration", "p2p" ]
keywords = [ "radicle", "upstream", "proxy", "git" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"
default-run = "radicle-proxy"

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-stream = "0.3"
chrono = { version = "0.4.19", features = [ "serde" ] }
data-encoding = "2.3"
directories = "2.0"
eip55 = "0.1.1"
futures = { version = "0.3", features = [ "compat" ] }
lazy_static = "1.4"
log = "0.4"
nonempty = { version = "0.6", features = [ "serialize" ] }
percent-encoding = "2.1"
pretty_env_logger = "0.3"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_qs = "0.6"
secstr = { version = "0.3.2", features = [ "serde" ] }
tempfile = "3.1"
thiserror = "1.0"
tokio = { version = "1.2", features = [ "macros", "process", "signal", "time" ] }
url = "2.1"
warp = { version = "0.3", default-features = false }

[dependencies.kv]
git = "https://github.com/zshipko/rust-kv.git"
rev = "a98e1ace84b22ceaac276abf796633bd8e735500"
features = [ "json-value" ]

[dependencies.coco]
path = "../coco"

[dependencies.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "9467c364fa232f6563caf7ec123c43ade9c23284"

[dependencies.radicle-avatar]
git = "https://github.com/radicle-dev/radicle-avatar.git"
rev = "4e34e6b992fd9f465b0547a5693b47b0d41dea01"

[dependencies.radicle-surf]
version = "0.5.0"
features = ["serialize"]

[dev-dependencies]
bytes = "1.0"
http = "0.2"
pretty_assertions = "0.6"
