[package]
name = "api"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Proxy to serve Upstream domain."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "code-collaboration", "p2p" ]
keywords = [ "radicle", "upstream", "proxy", "git" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"
default-run = "radicle-proxy"

[features]
# Enables the option to use fast but unsafe encryption and decryption
# of the key stored on disk.
unsafe-fast-keystore = []

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-stream = "0.3"
chrono = { version = "0.4.19", features = [ "serde" ] }
data-encoding = "2.3"
directories = "2.0"
eip55 = "0.1.1"
either = "1"
futures = { version = "0.3", features = [ "compat" ] }
kv = { version = "0.22", features = [ "json-value" ] }
lazy_static = "1.4"
nonempty = { version = "0.6", features = [ "serialize" ] }
percent-encoding = "2.1"
rand = "0.7"
radicle-keystore = "0.1"
radicle-source = { version = "^0.2.0", features = ["syntax"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_qs = "0.6"
secstr = { version = "0.3.2", features = [ "serde" ] }
tempfile = "3.1"
tracing = "0.1"
tracing-subscriber = "0.2.19"
thiserror = "1.0"
tokio = { version = "1.2", features = [ "macros", "process", "signal", "time" ] }
url = "2.1"
warp = { version = "0.3", default-features = false }

# radicle-link dependencies. These are patched in the workspace
librad = "0.1"
link-crypto = "0.1"
link-identities = "0.1"
rad-identities = "0.1"
radicle-daemon = "0.1"
radicle-git-ext = "0.1"
radicle-git-helpers = "0.1"

[dev-dependencies]
bytes = "1.0"
http = "0.2"
pretty_assertions = "0.6"
