[package]
name = "api"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Proxy to serve Upstream domain."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/main/README.md"
categories = [ "code-collaboration", "p2p" ]
keywords = [ "radicle", "upstream", "proxy", "git" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"
default-run = "radicle-proxy"

[dependencies]
anyhow = "1.0"
async-broadcast = "0.3.4"
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version =  "3.0", features = ["derive", "env"] }
data-encoding = "2.3"
directories = "4.0"
eip55 = "0.1.1"
either = "1"
futures = { version = "0.3", features = [ "compat" ] }
kv = { version = "0.22", features = [ "json-value" ] }
lazy_static = "1.4"
nonempty = { version = "0.6", features = [ "serialize" ] }
percent-encoding = "2.1"
rand = "0.8"
radicle-keystore = "0.1"
radicle-source = { version = "^0.2.0", features = ["syntax"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_qs = "0.8"
secstr = { version = "0.3.2", features = [ "serde" ] }
sha2 = "0.9.8"
tempfile = "3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
tokio = { version = "1.2", features = [ "macros", "process", "signal", "time" ] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
url = "2.1"
walkdir = "2"
warp = { version = "0.3", default-features = false }

# radicle-link dependencies. These are patched in the workspace
librad = "0.1"
link-crypto = "0.1"
link-identities = "0.1"
rad-identities = "0.1"
rad-exe = "0.1"
radicle-daemon = "0.1"
radicle-git-ext = "0.1"
radicle-git-helpers = "0.1"

[dev-dependencies]
bytes = "1.0"
http = "0.2"
pretty_assertions = "1"
tokio-test = "0.4"
