[package]
name = "coco"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Abstractions and utilities to run and interact with link and surf."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "code", "p2p" ]
keywords = [ "radicle", "upstream", "proxy", "git", "quic" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"

[dependencies]
futures = { version = "0.3", features = [ "compat" ] }
lazy_static = "1.4"
log = "0.4"
nonempty = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
syntect = "4.2"
thiserror = "1.0"
tokio = { version = "0.2", features = [ "dns", "macros", "time" ] }

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "555de1a1157a9341e82708049247cb8dfeb7f962"

[dependencies.radicle-git-helpers]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "dabbec104273eda48e943c1ff9fae8eedd8ba917"

[dependencies.radicle-keystore]
git = "https://github.com/radicle-dev/radicle-keystore.git"
rev = "3377e666bde3130a06dd19343e7df2eaa774176a"

[dependencies.radicle-surf]
version = "0.4.1"
features = ["serialize"]

[dev-dependencies]
pretty_assertions = "0.6"
tempfile = "3.1"
