[package]
name = "coco"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Abstractions and utilities to run and interact with link and surf."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "code", "p2p" ]
keywords = [ "radicle", "upstream", "proxy", "git", "quic" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"

[dependencies]
either = "1.6"
futures = { version = "0.3", features = [ "compat" ] }
lazy_static = "1.4"
log = "0.4"
nonempty = "0.5"
radicle-keystore = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_millis = "0.1"
syntect = "4.2"
thiserror = "1.0"
tokio = { version = "0.2", features = [ "dns", "macros", "time" ] }

[dependencies.kv]
git = "https://github.com/zshipko/rust-kv.git"
rev = "a98e1ace84b22ceaac276abf796633bd8e735500"
features = [ "json-value" ]

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "a20f96c1f07b245a0ef5c0538b75c8096fb68d8f"

[dependencies.radicle-git-helpers]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "a20f96c1f07b245a0ef5c0538b75c8096fb68d8f"

[dependencies.radicle-surf]
version = "0.4.1"
features = ["serialize"]

[dev-dependencies]
assert_matches = "1.3"
pretty_assertions = "0.6"
pretty_env_logger = "0.3"
tempfile = "3.1"
tracing = "0.1"
tracing-subscriber = "0.2"
