[package]
name = "coco"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["radicle team <dev@radicle.xyz>"]
edition = "2018"
description = "Abstractions and utilities to run and interact with link and surf."
readme = "https://github.com/radicle-dev/radicle-upstream/blob/master/proxy/README.md"
categories = [ "code", "p2p" ]
keywords = [ "radicle", "upstream", "proxy", "git", "quic" ]
repository = "git@github.com:radicle-dev/radicle-upstream.git"

[dependencies]
async-stream = "0.3"
either = "1.6"
futures = { version = "0.3", features = [ "compat" ] }
lazy_static = "1.4"
log = "0.4"
nonempty = "0.6"
radicle-keystore = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_millis = "0.1"
syntect = "4.2"
thiserror = "1.0"
tokio = { version = "1.2", features = [ "macros", "net", "rt-multi-thread", "sync", "time" ] }
url = "2.1"

[dependencies.kv]
git = "https://github.com/zshipko/rust-kv.git"
rev = "a98e1ace84b22ceaac276abf796633bd8e735500"
features = [ "json-value" ]

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "07b4bb364e8d268127b7b887cc94224676652afc"

[dependencies.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "07b4bb364e8d268127b7b887cc94224676652afc"

[dependencies.radicle-git-helpers]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "07b4bb364e8d268127b7b887cc94224676652afc"

[dependencies.radicle-surf]
version = "0.5"
features = ["serialize"]

[dependencies.git2]
version = "0.13"
default-features = false
features = []

[dev-dependencies]
assert_matches = "1.3"
pretty_assertions = "0.6"
pretty_env_logger = "0.3"
tempfile = "3.1"
tracing = "0.1"
tracing-subscriber = "0.2"
