[package]
name = "registry"
version = "0.1.0"
authors = ["Alexander Simmerl <a.simmerl@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

[dependencies.radicle-registry-client]
git = "https://github.com/radicle-dev/radicle-registry.git"
rev = "7c3057f81dd91fee364a4bfa410dbe61665bd1bc"
